# beacon

./: .gitignore  CLAUDE.md  README.md  alembic.ini  docker-entrypoint.sh  pyproject.toml
.github/workflows/: main.yml
alembic/: env.py
alembic/versions/: 0ca8aa81b94d_update.py  1e8ef8b163a6_update.py  42e61bfeaf1f_initial_schema.py  f4a5296f1474_update.py
beacon/: analysis.py  api.py  cli.py  db.py  emwa.py  log.py  mailgun.py  redis.py  server.py  settings.py  users.py
frontend/: index.html  package.json  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  main.tsx
frontend/src/features/auth/: Actions.tsx  OAuthCallback.tsx  User.tsx  UserProvider.tsx  jwt.tsx
frontend/src/rtk/: store.ts
frontend/static/: Dockerfile
