[tool.poetry]
name = "beacon"
version = "0.1.0"
description = ""
authors = ["Fr Grahame Bowland <frgrahame@bowland.au>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.4"
fastapi = "^0.116.1"
fastapi-users = {extras = ["oauth", "sqlalchemy"], version = "^14.0.1"}
uvicorn = {extras = ["standard"], version = "^0.35.0"}
asyncpg = "^0.30.0"
pydantic-settings = "^2.10.1"
shapely = "^2.1.1"
mailgun = "^1.1.0"
redis = "^6.4.0"

[tool.poetry.scripts]
beacon = "beacon.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
