[project]
name = "beacon"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.17.2",
    "asyncpg>=0.30.0",
    "black>=25.12.0",
    "fastapi-users[oauth,sqlalchemy]>=14.0.1",
    "mailgun>=1.2.0",
    "psycopg2>=2.9.11",
    "pydantic-settings>=2.11.0",
    "redis>=6.4.0",
    "ruff>=0.14.10",
    "shapely>=2.1.2",
    "uvicorn>=0.38.0",
]

[project.scripts]
beacon = "beacon.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["beacon"]

